# SmallDemo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: AbstractDrinking.cpp.06DEB540089126F0.idx  AbstractDrinking.h.C67D1D53FE1F60CF.idx  Coffee.cpp.C5A5BB576AF7912A.idx  Coffee.h.C720F09C881608CE.idx  Tea.cpp.75288C903E49B7C5.idx  Tea.h.068D73491F1249BE.idx  base.h.672E71104DF49507.idx  core.h.5350DFFF1346ECB9.idx  format-inl.h.36C09833CAB4FF71.idx  format.cc.8B7BDD38FECAEE6D.idx  format.h.539D7B8A536F08C3.idx  main.cpp.04A230572DB9E139.idx  main.cpp.0BBA6848717230B4.idx  main.cpp.0F717FE0B044906E.idx  main.cpp.212E595A2ABFBADA.idx  main.cpp.22386E5A86016AB1.idx  main.cpp.2321000142248A28.idx  main.cpp.2A80709F747DAE2E.idx  main.cpp.38E3036B9C0C8B8E.idx  main.cpp.39A19146BF366F5D.idx  main.cpp.40FBC3BED2A76309.idx  main.cpp.4F7BD9FED9976ED2.idx  main.cpp.586066EF82FAD7B3.idx  main.cpp.62EB2EDD1CE07B8A.idx  main.cpp.7AA7FE9AD99932B5.idx  main.cpp.88F284E569DA4573.idx  main.cpp.91242017CDD10C98.idx  main.cpp.A2BC16EC96DDDF0E.idx  main.cpp.BDCDEE2AC42F6AB3.idx  main.cpp.BE121925F5E163BA.idx  main.cpp.D9EE39D805717F18.idx  main.cpp.F8AB5FDFEAD0CA04.idx  main.cpp.F8E0AA6CA7280292.idx  mian.cpp.227F7C12DE0B8BDD.idx  os.cc.01197BEC127D685A.idx  os.h.3947036143251957.idx  person.hpp.1944064E433AE524.idx  person.hpp.AA94518C67777D4E.idx  ranges.h.98713BA13A883103.idx
.github/workflows/: cmake_unix.yml  cmake_windows.yml
0_about_c/: CMakeLists.txt  main.cpp
0_bitfield/: CMakeLists.txt  main.cpp
10_readwritelock/: CMakeLists.txt  main.cpp
11_locktopic/: CMakeLists.txt  main.cpp
12_smartpointer/: CMakeLists.txt  main.cpp
12_smartpointer2/: CMakeLists.txt  main.cpp
12_smartpointer3/: CMakeLists.txt  main.cpp
13_tuple_pair/: CMakeLists.txt  main.cpp
14_callableobject/: CMakeLists.txt  main.cpp
15_mem_reference_qualifier/: CMakeLists.txt  main.cpp
16_variadic_templates/: CMakeLists.txt  main.cpp
17_invoke/: CMakeLists.txt  main.cpp
18_string_view/: CMakeLists.txt  main.cpp
19_structured_binding/: CMakeLists.txt  main.cpp
1_hello/: CMakeLists.txt  main.cpp
20_if_constexpr/: CMakeLists.txt  main.cpp
21_CTAD/: CMakeLists.txt  main.cpp
22_RAII/: CMakeLists.txt  main.cpp
2_map/: CMakeLists.txt  main.cpp
2_vector/: CMakeLists.txt  main.cpp
3_sizeof/: CMakeLists.txt  main.cpp
4_metaprogram/: CMakeLists.txt  main.cpp
5_multifiles/: AbstractDrinking.cpp  AbstractDrinking.h  CMakeLists.txt  Coffee.cpp  Coffee.h  Tea.cpp  Tea.h  mian.cpp
6_operator_new/: CMakeLists.txt  main.cpp  person.hpp
6_operator_new2/: CMakeLists.txt  main.cpp  person.hpp
6_operator_new3/: CMakeLists.txt  main.cpp
7_multithread/: CMakeLists.txt  main.cpp
7_multithreadmutex/: CMakeLists.txt  main.cpp
8_condition_variable/: CMakeLists.txt  main.cpp
8_condition_variable2/: CMakeLists.txt  main.cpp
9_feature_async/: CMakeLists.txt  main.cpp
9_future_async/: CMakeLists.txt  main.cpp
9_future_async2/: CMakeLists.txt  main.cpp
